--- a/WebBooks/catalog/templates/base_generic.html
+++ b/WebBooks/catalog/templates/base_generic.html
@@ -25,6 +25,26 @@
                     <li><a href="{% url 'index' %}">Главная страница</a></li>
                     <li><a href="{% url 'books' %}">Bce книги</a></li>
                     <li><a href="{% url 'authors' %}">Bce авторы</a></li>
+                    <li><a href="{% url 'authors_add' %}">Добавить авторов</a></li>
+                    {% if user.is_authenticated %}
+                        <li>Пользователь: {{ user.get_username }}</li>
+                        <li>
+                            <form method='post' action="{% url 'logout'%}">
+                                {% csrf_token %}
+                                <button type="submit">Logout</button>
+                            </form>
+                        </li>
+                        <li>
+                            <a href="{% url 'my_borrowed' %}">Мои заказы</a>
+                        </li>
+                    {% else %}
+                        <li>
+                            <form method='get' action="{% url 'login'%}">
+                                {% csrf_token %}
+                                <button type="submit">Login</button>
+                            </form>
+                        </li>
+                    {% endif %}
                 </ul>
                 {% endblock %}
             </div>
