--- a/WebBooks/catalog/templates/base_generic.html
+++ b/WebBooks/catalog/templates/base_generic.html
@@ -26,6 +26,7 @@
                     <li><a href="{% url 'books' %}">Bce книги</a></li>
                     <li><a href="{% url 'authors' %}">Bce авторы</a></li>
                     <li><a href="{% url 'authors_add' %}">Добавить авторов</a></li>
+                    <li><a href="{% url 'book_create' %}">Добавить книгу</a></li>
                     {% if user.is_authenticated %}
                         <li>Пользователь: {{ user.get_username }}</li>
                         <li>
