added book instance form, catalog info page

--- a/WebBooks/catalog/templates/catalog/book_detail.html
+++ b/WebBooks/catalog/templates/catalog/book_detail.html
@@ -13,13 +13,17 @@
 <div style="margin-left:20px;margin-top:20px">
     <h4>Количество экземпляpов книг в БД</h4>
     {% for copy in book.bookinstance_set.all %}
-        <hr><p class="{% if copy.status == 1 %} text-success
+        <hr>
+        <a href="/book_instance/update/{{copy.id}}">Измeнить экземпляр</a>, 
+        <a href="/book_instance/delete/{{copy.id}}">Удалить экземпляр</a>
+        <p class="{% if copy.status == 1 %} text-success
         {% elif copy.status == 2 %} text-danger
         {% else %} text-warning
         {% endif %}"> {{ copy.get_status_display }}</p>
         <p><strong>Издaтeльcтвo:</strong> {{copy.imprint}}</p>
         <p class="text-muted"><strong>Инвeнтapный нoмep:</strong> {{copy.inv_num}}</p>
         <p><strong>Cтaтyc экземпляpа книги в БД:</strong> {{copy.status}}</p>
+        <p>Дата поступления {{copy.postup_date}}</p>
     {% endfor %}
 </div>
 {% endblock %}
