--- a/WebBooks/catalog/templates/base_generic.html
+++ b/WebBooks/catalog/templates/base_generic.html
@@ -27,6 +27,8 @@
                     <li><a href="{% url 'authors' %}">Bce авторы</a></li>
                     <li><a href="{% url 'authors_add' %}">Добавить авторов</a></li>
                     <li><a href="{% url 'book_create' %}">Добавить книгу</a></li>
+                    <li><a href="{% url 'book_instance_create' %}">Добавить экземпляр книги</a></li>
+                    <li><a href="{% url 'catalog_info' %}">Отчёт по сайту</a></li>
                     {% if user.is_authenticated %}
                         <li>Пользователь: {{ user.get_username }}</li>
                         <li>
