--- a/WebBooks/catalog/templates/catalog/catalog_info.html
+++ b/WebBooks/catalog/templates/catalog/catalog_info.html
@@ -1,6 +1,5 @@
 {% extends "base_generic.html" %}
 {% block content %}
-<h1>Список книг в БД</h1>
 {% if book_list %}
     <h2>Всего книг в БД: {{book_list.count}}</h2>
     <ul>
@@ -12,5 +11,22 @@
     </ul>
 {% else %}
     <p>В базе данных нет книг</p>
+{% endif %}
+{% if authors %}
+    <h2>Авторы:</h2>
+        {% for author in authors %}
+            <li>
+                {{author.first_name}} {{author.last_name}}
+                <ul>
+                    {% for author_book in author.book_set.all %}
+                    <li>
+                        <a href="/books/{{author_book.id}}">{{author_book.title}}</a>
+                    </li>
+                    {% endfor %}
+                </ul>
+            </li>
+        {% endfor %}
+{% else %}
+    <p>В базе данных нет авторов</p>
 {% endif %}
 {% endblock %}
