--- a/WebBooks/catalog/templates/catalog/catalog_info.html
+++ b/WebBooks/catalog/templates/catalog/catalog_info.html
@@ -5,10 +5,11 @@
     <ul>
         {% for book in book_list %}
             <li>
-                <a href="/books/{{book.id}}">{{book.title}}</a>: {{book.bookinstance_set.all.count}} экземпляров книги
+                <a href="/books/{{book.id}}">{{book.title}}</a>: {{book.instance_count}} экземпляров книги
             </li>
         {% endfor %}
     </ul>
+    
 {% else %}
     <p>В базе данных нет книг</p>
 {% endif %}
@@ -16,9 +17,9 @@
     <h2>Авторы:</h2>
         {% for author in authors %}
             <li>
-                {{author.first_name}} {{author.last_name}}
+                {{author.first_name}} {{author.last_name}} написал {{author.book_count}} книг
                 <ul>
-                    {% for author_book in author.book_set.all %}
+                    {% for author_book in author.author_books %}
                     <li>
                         <a href="/books/{{author_book.id}}">{{author_book.title}}</a>
                     </li>
